更新文件目录结构